<resources>
    <string name="app_name">Messenger</string>
    <string name="nickname">Nickname</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="password_repeat">Repeat Password</string>
    <string name="register">Register</string>
    <string name="registration_upper">REGISTRATION</string>
    <string name="login_upper">LOGIN</string>
    <string name="password_error_text">Password must contain only symbols a–z and 0–9</string>
    <string name="password_mismatch_error">Passwords don\'t match</string>
    <string name="password_length_error">Password length must be more than 6 symbols</string>
    <string name="login_error_text">Login must contain only symbols a–z and 0–9</string>
    <string name="empty_nickname_error">You should type a nickname!</string>
    <string name="wrong_data">Login or password is wrong!</string>
    <string name="user_exists">User with such login already exists!</string>
    <string name="upload_photo">Upload photo</string>
    <string name="logout">Logout</string>
</resources>